force-app/main/default/objects/LiveEngage__Related_List_Config__c/fields/LiveEngage__Field_to_Sort__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Field_to_Sort__c</fullName>
    <description>Name of the related list field to sort on</description>
    <label>Field to Sort</label>
    <length>55</length>
    <type>Text</type>
</CustomField>