force-app/main/default/objects/LiveEngage__Related_List_Config__c/fields/LiveEngage__Fields_to_Show__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Fields_to_Show__c</fullName>
    <description>What fields are displayed on the Widget related list item</description>
    <label>Fields to Show</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>