force-app/main/default/objects/LiveEngage__Related_List_Config__c/fields/LiveEngage__Number_of_Records__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Number_of_Records__c</fullName>
    <description>The number of records to show</description>
    <label>Number of Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>