force-app/main/default/objects/LiveEngage__Related_List_Config__c/fields/LiveEngage__Object_Mapping_Config__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Object_Mapping_Config__c</fullName>
    <description>Link to parent object</description>
    <label>Object Mapping Config</label>
    <referenceTo>LiveEngage__Object_Mapping__c</referenceTo>
    <relationshipLabel>Related List Config</relationshipLabel>
    <relationshipName>Related_List_Config</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>