force-app/main/default/objects/LiveEngage__Related_List_Config__c/fields/LiveEngage__Object_Type__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Object_Type__c</fullName>
    <label>Object Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>