force-app/main/default/objects/LiveEngage__Related_List_Config__c/fields/LiveEngage__Related_List_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Related_List_Sort_Order__c</fullName>
    <label>Related List Sort Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>