force-app/main/default/objects/LiveEngage__Related_List_Config__c/fields/LiveEngage__Sort_Direction__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Sort_Direction__c</fullName>
    <description>Ascending or Decending</description>
    <label>Sort Direction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Asc</fullName>
            </value>
            <value>
                <fullName>Desc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>