force-app/main/default/objects/LiveEngage__Related_List_Config__c/fields/LiveEngage__Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Unique_Id__c</fullName>
    <label>Unique Id</label>
    <length>120</length>
    <type>Text</type>
</CustomField>